--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
     "react-typed": "^2.0.12",
     "tailwind-merge": "^2.5.2"
