--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,11 @@
-{
+/* {
   "compilerOptions": {
     "checkJs": true,
     "jsx": "react-jsx",
     "baseUrl": "src",
     "resolveJsonModule": true,
-    "lib": ["es6", "dom", "es2017"]
+    "lib": ["ESNext", "DOM"], 
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "src"
@@ -14,3 +15,4 @@
     "build"
   ]
 }
+ */
