--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-three/fiber": "^8.17.9",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "firebase": "^11.0.2",
+    "firebase-admin": "^13.0.1",
     "framer-motion": "^10.18.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
@@ -27,8 +29,8 @@
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.3.14",
+    "@types/react-dom": "^18.3.2",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.38.0",
@@ -37,6 +39,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
+    "typescript": "^5.7.2",
     "vite": "^4.3.2",
     "vite-plugin-qrcode": "^0.2.3"
   }
