--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@formspree/react": "^2.4.1",
     "@lottiefiles/lottie-player": "^2.0.4",
     "@react-three/fiber": "^8.17.9",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "firebase": "^11.0.2",
     "firebase-admin": "^13.0.1",
@@ -29,6 +29,7 @@
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
+    "@babel/cli": "^7.26.4",
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.2",
     "@vitejs/plugin-react": "^4.0.0",
