--- a/package.json
+++ b/package.json
@@ -13,20 +13,26 @@
     "@formspree/react": "^2.4.1",
     "@lottiefiles/lottie-player": "^2.0.4",
     "@react-three/fiber": "^8.17.9",
+    "@types/three": "^0.170.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "firebase": "^11.0.2",
     "firebase-admin": "^13.0.1",
     "framer-motion": "^10.18.0",
+    "konva": "^9.3.16",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-modal": "^3.16.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
+    "react-sketch": "^0.5.1",
     "react-typed": "^2.0.12",
-    "tailwind-merge": "^2.5.5"
+    "react-video-annotation-tool": "^2.1.1",
+    "tailwind-merge": "^2.5.5",
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
