--- a/package.json
+++ b/package.json
@@ -16,19 +16,25 @@
     "@types/three": "^0.170.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "fabric": "^6.5.3",
+    "fabricjs-react": "^1.2.2",
     "firebase": "^11.0.2",
     "firebase-admin": "^13.0.1",
     "framer-motion": "^10.18.0",
     "konva": "^9.3.16",
     "lottie-react": "^2.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-canvas-draw": "^1.2.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-image-annotation": "^0.9.10",
     "react-intersection-observer": "^9.13.1",
     "react-modal": "^3.16.1",
+    "react-picture-annotation": "^1.2.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
     "react-sketch": "^0.5.1",
+    "react-sketch-canvas": "^6.2.0",
     "react-typed": "^2.0.12",
     "react-video-annotation-tool": "^2.1.1",
     "tailwind-merge": "^2.5.5",
