--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-typed": "^2.0.12",
     "react-video-annotation-tool": "^2.1.1",
     "tailwind-merge": "^2.5.5",
+    "tailwind-scrollbar": "^3.1.0",
     "three": "^0.171.0"
   },
   "devDependencies": {
