--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^8.17.9",
     "@types/three": "^0.170.0",
     "axios": "^1.7.9",
+    "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.1",
     "fabric": "^6.5.3",
     "fabricjs-react": "^1.2.2",
