--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.3.1",
     "react-canvas-draw": "^1.2.1",
     "react-dom": "^18.3.1",
+    "react-github-calendar": "^4.5.2",
     "react-icons": "^5.3.0",
     "react-image-annotation": "^0.9.10",
     "react-intersection-observer": "^9.13.1",
